doctorapp/force-app/main/default/objects/Sale_Item__c/Sale_Item__c.object-meta.xml
<CustomObject>
    <description>Line item of a sale (detail of Sale).</description>
    <label>Sale Item</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Sale Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>