doctorapp/force-app/main/default/objects/Sale_Item__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount applied to this line.</description>
    <label>Discount Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>