doctorapp/force-app/main/default/objects/Sale_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>(Quantity x Unit Price) - Discount + Tax. Enforced by validation rule.</description>
    <label>Line Total</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>