doctorapp/force-app/main/default/objects/Sale_Item__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <description>References Sale (master-detail).</description>
    <label>Sale</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Sale Items</relationshipLabel>
    <relationshipName>Sale_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>