doctorapp/force-app/main/default/objects/Sale_Item__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tax applied to this line.</description>
    <label>Tax Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>