doctorapp/force-app/main/default/objects/Sale_Item__c/validationRules/Non_Negative_Amounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Amounts</fullName>
    <active>true</active>
    <description>Line monetary values cannot be negative.</description>
    <errorConditionFormula>Unit_Price__c &lt; 0 || Discount_Amount__c &lt; 0 || Tax_Amount__c &lt; 0 || Line_Total__c &lt; 0</errorConditionFormula>
    <errorMessage>Unit Price, Discount Amount, Tax Amount and Line Total cannot be negative.</errorMessage>
</ValidationRule>