doctorapp/force-app/main/default/objects/Sale_Item__c/validationRules/Quantity_At_Least_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_At_Least_One</fullName>
    <active>true</active>
    <description>A sale line must carry at least one unit.</description>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorMessage>Quantity must be at least 1.</errorMessage>
    <errorDisplayField>Quantity__c</errorDisplayField>
</ValidationRule>